Finished front page html & css

--- a/game.html
+++ b/game.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <script src="main.js" defer></script>
-    <script defer src ="node_modules/swup/dist/swup.min.js"></script>
-    <title>Rock Paper Scissors</title>
+    <title>Game</title>
+    <link rel="icon" type="image/x-icon" href="/home/diana/repos/rockpaperscissors/images/favicon.ico">
 </head>
 <body>
+
+    <div class="transition is-active"></div>
+
     <div>
         <h3>Play me best of 5! Or else...!</h3>
         <div class="computer-container">
