--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="transitions.css" rel="stylesheet">
     <script src="main.js" defer></script>
-    <script defer src =”node_modules/swup/dist/swup.min.js”></script>
     <title>Rock Paper Scissors</title>
+    <link rel="icon" type="image/x-icon" href="/home/diana/repos/rockpaperscissors/images/favicon.ico">
 </head>
 <body>
-    <h1>Hey mister, wanna play rock, paper, or scissors?</h1>
-    <nav>
-        <button class ><a href="/repos/rockpaperscissors/game.html">Fine! I'll Play.</a></button>
-    </nav>
+    <div class="logo"><img src="/home/diana/repos/rockpaperscissors/images/jojo_logo.png" alt="Jojo's Bizarre Adventure Japanese Logo"></div>
+    <div class="body-columns">
+        <div class="left-side">
+            <div class="question">Hey mister, <br> wanna play rock, paper, or scissors?</div>
+            <nav>
+                <button class="play"><a href="/home/diana/repos/rockpaperscissors/game.html">Fine! I'll Play.</a></button>
+            </nav>
+        </div>
+    
+        <div class="right-side">
+            <img class="right-child" src="/home/diana/repos/rockpaperscissors/images/Ken_Anime.png" alt="Ken Oyanagi Picture">
+        </div>
+    </div>
+    <footer>Made by ddtea. ⚜ 2022.</footer>
 </body>
+
 </html>
