--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -10,13 +10,17 @@
     <title>Rock Paper Scissors</title>
     <link rel="icon" type="image/x-icon" href="/home/diana/repos/rockpaperscissors/images/favicon.ico">
 </head>
+
+<!-- SOCIAL MEDIA: https://www.w3schools.com/howto/howto_css_social_media_buttons.asp -->
+
+
 <body>
     <div class="logo"><img src="/home/diana/repos/rockpaperscissors/images/jojo_logo.png" alt="Jojo's Bizarre Adventure Japanese Logo"></div>
     <div class="body-columns">
         <div class="left-side">
-            <div class="question">Hey mister, <br> wanna play rock, paper, or scissors?</div>
+            <div>Hey mister, <br> wanna play rock, paper, or scissors?</div>
             <nav>
-                <button class="play"><a href="/home/diana/repos/rockpaperscissors/game.html">Fine! I'll Play.</a></button>
+                <a class= "play-link" href="/home/diana/repos/rockpaperscissors/game.html">Fine! I'll Play.</a>
             </nav>
         </div>
     
