Changed to relative paths

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="main.js" defer></script>
     <title>Game</title>
-    <link rel="icon" type="image/x-icon" href="/home/diana/repos/rockpaperscissors/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- SOCIAL MEDIA: https://www.w3schools.com/howto/howto_css_social_media_buttons.asp -->
@@ -18,7 +18,7 @@
         <div class="gamebody gameplay">
             <div class="header">Play me best of 5! Or else...!</div>
             <div class="computer-container">
-                <div><img class="ken_body" src="/home/diana/repos/rockpaperscissors/images/ken_body.png"></div>
+                <div><img class="ken_body" src="images/ken_body.png"></div>
                 <div class="computer-right">
                     <div class="kens-pick">
                         <div class="kens-text">Ken's pick</div>
@@ -33,25 +33,25 @@
             </div>  
 
             <div class="player-container">
-                <div><img class="rohans-face" src="/home/diana/repos/rockpaperscissors/images/favicon.ico" ></div>
+                <div><img class="rohans-face" src="images/favicon.ico" ></div>
                 <div class="player-right">
                     <ul class="players-pick">
                         <li class="buttons gif">
                             <button>
                                 Rock<br>
-                                <img class="img-hover" id ="rock" src="/home/diana/repos/rockpaperscissors/images/rock.png">
+                                <img class="img-hover" id ="rock" src="images/rock.png">
                             </button>
                         </li>
                         <li class="buttons gif">
                             <button>
                                 Paper<br>
-                                <img class="img-hover" id ="paper" src="/home/diana/repos/rockpaperscissors/images/paper.png">
+                                <img class="img-hover" id ="paper" src="images/paper.png">
                             </button>
                         </li>
                         <li class="buttons gif">
                             <button>
                                 Scissors<br>
-                                <img class="img-hover" id ="scissors" src="/home/diana/repos/rockpaperscissors/images/scissors.png">
+                                <img class="img-hover" id ="scissors" src="images/scissors.png">
                             </button>
                         </li> 
                     </ul>
@@ -68,6 +68,6 @@
         </div>
         <div class="gamebody"></div>
     </div>
-    <div><a id = "try-again" class = "play-link" href="/home/diana/repos/rockpaperscissors/index.html" >Try again?</a></div>
+    <div><a id = "try-again" class = "play-link" href="index.html" >Try again?</a></div>
     <footer>Made by ddtea. ⚜ 2022.</footer>
 </body>
