--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link href="transitions.css" rel="stylesheet">
     <script src="main.js" defer></script>
     <title>Rock Paper Scissors</title>
-    <link rel="icon" type="image/x-icon" href="/home/diana/repos/rockpaperscissors/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- SOCIAL MEDIA: https://www.w3schools.com/howto/howto_css_social_media_buttons.asp -->
 
 
 <body>
-    <div class="logo"><img src="/home/diana/repos/rockpaperscissors/images/jojo_logo.png" alt="Jojo's Bizarre Adventure Japanese Logo"></div>
+    <div class="logo"><img src="images/jojo_logo.png" alt="Jojo's Bizarre Adventure Japanese Logo"></div>
     <div class="body-columns">
         <div class="left-side">
             <div>Hey mister, <br> wanna play rock, paper, or scissors?</div>
             <nav>
-                <a class= "play-link" href="/home/diana/repos/rockpaperscissors/game.html">Fine! I'll Play.</a>
+                <a class= "play-link" href="game.html">Fine! I'll Play.</a>
             </nav>
         </div>
     
         <div class="right-side">
-            <img class="right-child" src="/home/diana/repos/rockpaperscissors/images/Ken_Anime.png" alt="Ken Oyanagi Picture">
+            <img class="right-child" src="images/Ken_Anime.png" alt="Ken Oyanagi Picture">
         </div>
     </div>
     <footer>Made by ddtea. ⚜ 2022.</footer>
