Changed to relative path for computer default pic

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
                 <div class="computer-right">
                     <div class="kens-pick">
                         <div class="kens-text">Ken's pick</div>
-                        <div class="computerChoice"><img class="img-hover fight" id = 'computerChoice' src="/home/diana/repos/rockpaperscissors/images/boxing.gif"></div>    
+                        <div class="computerChoice"><img class="img-hover fight" id = 'computerChoice' src="images/boxing.gif"></div>    
                     </div>
                     <div class="comp-score-display">
                         <div class="wins-text">Wins</div>
